--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -68,7 +68,7 @@ body {
   background: url("/images/circuit-pattern-blue.png") repeat #007eff; }
 
 .black-bg {
-  background: url("/images/circuit-pattern-black.png") repeat #007eff; }
+  background: url("/images/circuit-pattern-black.png") repeat #151515; }
 
 /*
  * Header
@@ -83,14 +83,34 @@ body {
     text-decoration: underline; }
 
 /*
- * Cover
+ * Video section
  */
-.cover {
-  padding: 0 20px; }
+.video-section {
+  padding-top: 30px; }
+  .video-section p {
+    color: #007eff;
+    text-shadow: 0px 0px 30px black;
+    font-size: 20px;
+    text-align: left;
+    line-height: 1.1; }
 
-.cover .btn-lg {
-  padding: 10px 20px;
-  font-weight: bold; }
+#video-placeholder {
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.8); }
+
+#video-placeholder img {
+  margin-top: 30px;
+  cursor: pointer;
+  cursor: hand;
+  width: 100%; }
+
+.btn-lg.btn-blue {
+  background-color: #007eff;
+  color: #fff;
+  border-radius: 0;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 25px;
+  box-shadow: 0px 0px 30px black; }
 
 /*
  * Footer
