--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -77,10 +77,10 @@ body {
  * bg styles
  */
 .blue-bg {
-  background: url('/images/circuit-pattern-blue.png') repeat $blue;
+  background: url('../images/circuit-pattern-blue.png') repeat $blue;
 }
 .black-bg {
-  background: url('/images/circuit-pattern-black.png') repeat $black;
+  background: url('../images/circuit-pattern-black.png') repeat $black;
 }
 
 /*
