--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -14,33 +14,34 @@
   float: left;
   width: 54px;
   height: 54px;
-  background-color: black;
-  background-image: url("../images/social-icons.png"); }
+  background-color: transparent;
+  background-image: url("../images/social-icons.png");
+  background-repeat: no-repeat; }
 
 #share-buttons .sicon {
   margin-top: 2px; }
 
 #sfb {
-  background-position: 70% 0; }
-
-#sfb:hover {
-  opacity: 0.8; }
+  background-position: 0 -57px; }
 
 #stwit {
   background-position: 50% 0; }
 
-#stwit:hover {
-  opacity: 0.8; }
-
 #sgplus {
-  background-position: 20% 0; }
+  background-position: 0 -115px; }
 
-#sgplus:hover {
-  opacity: 0.8; }
+#semail {
+  background-position: 0 -175px; }
 
-.social-count {
+#semail:hover, #sgplus:hover, #stwit:hover, #sfb:hover {
+  opacity: 0.9; }
+
+.social-count, .social-no-count {
   display: inline-block;
   position: relative; }
+
+#share-buttons .social-no-count {
+  margin-top: 0; }
 
 .social-count:after {
   background: #fff;
@@ -202,6 +203,7 @@ body {
 
 #video-placeholder img {
   margin-top: 30px;
+  margin-bottom: 40px;
   cursor: pointer;
   cursor: hand;
   width: 100%; }
