--- a/docs/sass/_social-buttons.scss
+++ b/docs/sass/_social-buttons.scss
@@ -14,39 +14,38 @@
     float: left;
     width:54px;
     height:54px;
-    background-color:black;
+    background-color: transparent;
     background-image: url("../images/social-icons.png");
+    background-repeat: no-repeat;
 }
 #share-buttons .sicon {
     margin-top: 2px;
 
 }
 #sfb {
-    background-position:70% 0 ;
+    background-position:0 -57px ;
 }
-
-#sfb:hover {
-    opacity:0.8;
-}
-
 #stwit {
     background-position:50% 0 ;
 }
 
-#stwit:hover {
-    opacity:0.8;
-}
-
 #sgplus{
-    background-position:20% 0 ;
-}
-#sgplus:hover{
-    opacity:0.8;
+    background-position:0 -115px ;
 }
 
-.social-count {
+#semail{
+    background-position:0 -175px ;
+}
+#semail:hover, #sgplus:hover, #stwit:hover, #sfb:hover{
+    opacity:0.9;
+}
+
+.social-count, .social-no-count {
     display: inline-block;
     position: relative;
+}
+#share-buttons .social-no-count {
+  margin-top: 0;
 }
 
 .social-count:after {
