--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -117,6 +117,7 @@ body {
 }
 #video-placeholder img {
   margin-top: 30px;
+  margin-bottom:40px;
   cursor: pointer; cursor: hand;
   width: 100%;
 }
