--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -218,12 +218,31 @@ body {
   box-shadow: 0px 0px 30px black; }
 
 /*
+ * Call section
+ */
+.calltool-section iframe {
+  width: 100%; }
+
+/*
+ * Background section
+ */
+.background-section {
+  padding-bottom: 50px; }
+  .background-section p {
+    color: #007eff;
+    font-size: 22px;
+    text-align: left;
+    text-shadow: 0px 4px 8px black; }
+  .background-section h1 {
+    margin: 40px 0 20px 0; }
+
+/*
  * Footer
  */
-.mastfoot {
-  color: #999;
-  /* IE8 proofing */
-  color: rgba(255, 255, 255, 0.5); }
+.footer {
+  background-color: #151515;
+  padding: 20px 0;
+  text-align: left; }
 
 /*
  * Affix and center
