--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -132,12 +132,37 @@ body {
 }
 
 /*
+ * Call section
+ */
+
+.calltool-section iframe {
+  width: 100%;
+}
+
+/*
+ * Background section
+ */
+.background-section {
+  padding-bottom:50px;
+  p {
+    color: $blue;
+    font-size: 22px;
+    text-align: left;
+    text-shadow: 0px 4px 8px black;
+  }
+  h1 {
+    margin: 40px 0 20px 0;
+  }
+}
+
+/*
  * Footer
  */
 
-.mastfoot {
-  color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5);
+.footer {
+  background-color: $black;
+  padding: 20px 0;
+  text-align: left;
 }
 
 
