--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -88,9 +88,27 @@ body {
 /*
  * Header
  */
- .jumbotron .img-responsive {
+ .jumbotron svg {
   width: 100%;
   margin-top: 100px;
+  -webkit-animation-duration: 0.5s;
+  animation-duration: 0.5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: fadeInUp;
+  animation-name: fadeInUp;
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
+ }
+ @keyframes fadeInUp {
+   0% {
+     opacity: 0;
+     transform: translate3d(0, 30%, 0);
+   }
+   100% {
+     opacity: 1;
+     transform: none;
+   }
  }
  .jumbotron {
   margin-bottom:0;
