--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -38,11 +38,9 @@ a:hover {
   border: 1px solid #fff;
 }
 
-
 /*
  * Base structure
  */
-
 html,
 body {
   height: 100%;
@@ -59,13 +57,12 @@ body {
  * Navbar
  */
 .navbar-inverse {
-  background-color: $black;
+  background-color: #000;
 }
 .nav>li>a {
   text-transform: uppercase;
 }
 .navbar-inverse .navbar-brand {
-  color: #9d9d9d;
   color: #fff;
   text-transform: uppercase;
 }
@@ -90,7 +87,8 @@ body {
  */
  .jumbotron svg {
   width: 100%;
-  margin-top: 100px;
+  max-width: 800px;
+  margin-top: 50px;
   -webkit-animation-duration: 0.5s;
   animation-duration: 0.5s;
   -webkit-animation-fill-mode: both;
@@ -122,6 +120,7 @@ body {
   */
 .video-section {
   padding-top: 30px;
+  min-height: 600px;
   p {
     color: $blue;
     text-shadow: 0px 0px 30px rgba(0,0,0,1);
@@ -130,10 +129,11 @@ body {
     line-height: 1.1;
   }
 }
-#video-placeholder {
-  box-shadow: 0px 10px 30px rgba(0,0,0,0.8);
+#video-container {
+  box-shadow: 0px 0px 30px rgba(0,0,0,0.8);
+  iframe {max-width: 100%;}
 }
-#video-placeholder img {
+#video-container img {
   margin-top: 30px;
   margin-bottom:40px;
   cursor: pointer; cursor: hand;
@@ -166,7 +166,7 @@ body {
     color: $blue;
     font-size: 22px;
     text-align: left;
-    text-shadow: 0px 4px 8px black;
+    text-shadow: 0px 0px 20px black;
   }
   h1 {
     margin: 40px 0 20px 0;
