--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -68,7 +68,7 @@ body {
 }
 .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>li>a {
   color: $blue;
-  background-color: $black;
+  background-color: #000;
   font-size: 17px;
 }
 
