--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -154,8 +154,12 @@ body {
 /*
  * Navbar
  */
+.navbar-inverse.visible {
+  opacity: 1; }
+
 .navbar-inverse {
-  background-color: #000; }
+  background-color: #000;
+  opacity: 0; }
 
 .nav > li > a {
   text-transform: uppercase; }
@@ -184,7 +188,7 @@ body {
 .jumbotron svg {
   width: 100%;
   max-width: 800px;
-  margin-top: 50px;
+  margin-top: 0px;
   -webkit-animation-duration: 0.5s;
   animation-duration: 0.5s;
   -webkit-animation-fill-mode: both;
