--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -158,10 +158,53 @@ body {
  * Call section
  */
 
-.calltool-section iframe {
-  width: 100%;
+.calltool-section  {
+  padding: 20px 0 50px 0;
 }
+#call-script {
+  background-color: #fff;
+  text-shadow: none;
+  color: $black;
+  font-size: 18px;
+  padding: 20px;
+  text-align: left;
+  box-shadow: 0px 0px 50px rgba(0,0,0,0.7);
+  margin-top:20px;
 
+  h5 {
+    text-align: left;
+    color: $blue;
+    text-transform: uppercase;
+    font-size: 18px;
+    margin-top: 0px;
+    margin-bottom: 10px;
+  }
+}
+#tf-call-widget-form {
+  text-align:left;
+  padding-left: 10px;
+  h5 {
+    text-transform: uppercase;
+    font-size: 23.5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  label {
+    font-size: 16px;
+  }
+}
+.btn-lg.btn-black {
+  background-color: #000;
+  border-radius: 0;
+  font-size: 25px;
+  text-transform: uppercase;
+  padding: 5px 20px;
+    border: 4px solid #000;
+  &:hover {
+    color: #fff;
+    border: 4px solid #fff;
+  }
+}
 /*
  * Background section
  */
