--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -180,7 +180,7 @@ body {
   background: url("../images/circuit-pattern-blue.png") repeat #007eff; }
 
 .black-bg {
-  background: url("../images/circuit-pattern-black.png") repeat #151515; }
+  background: url("../images/circuit-pattern-black.png") repeat black; }
 
 /*
  * Header
@@ -294,13 +294,38 @@ body {
  * Background section
  */
 .background-section {
-  padding-bottom: 50px; }
+  padding-bottom: 50px;
+  background: transparent;
+  position: relative; }
+  .background-section::before {
+    content: "";
+    background: url("../images/circuit-pattern-black.png") repeat black;
+    opacity: 0.5;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1; }
+  .background-section::after {
+    content: "";
+    background: #000;
+    opacity: 1;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -2; }
   .background-section p {
-    color: #007eff;
+    color: #fff;
     font-size: 22px;
     text-align: left;
-    text-shadow: 0px 0px 20px black; }
+    text-shadow: 0px 0px 20px black;
+    opacity: 1;
+    margin-bottom: 20px; }
   .background-section h1 {
+    color: #007eff;
     margin: 40px 0 20px 0; }
 
 /*
