--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -84,7 +84,7 @@ body {
   background: url('../images/circuit-pattern-blue.png') repeat $blue;
 }
 .black-bg {
-  background: url('../images/circuit-pattern-black.png') repeat $black;
+  background: url('../images/circuit-pattern-black.png') repeat #000;
 }
 
 /*
@@ -210,13 +210,40 @@ body {
  */
 .background-section {
   padding-bottom:50px;
+  background: transparent;
+  position: relative;
+  &::before {
+    content: "";
+    background: url('../images/circuit-pattern-black.png') repeat #000;
+    opacity: 0.5;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;   
+  }
+  &::after {
+    content: "";
+    background: #000;
+    opacity: 1;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -2;   
+  }
   p {
-    color: $blue;
+    color: #fff;
     font-size: 22px;
     text-align: left;
     text-shadow: 0px 0px 20px black;
+    opacity: 1;
+    margin-bottom:20px;
   }
   h1 {
+    color: $blue;
     margin: 40px 0 20px 0;
   }
 }
