js cleanup and rewrite nav show/hide

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -159,7 +159,7 @@ body {
 
 .navbar-inverse {
   background-color: #000;
-  opacity: 0; }
+  display: none; }
 
 .nav > li > a {
   text-transform: uppercase; }
