--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -62,7 +62,7 @@ body {
  }
 .navbar-inverse {
   background-color: #000;
-  opacity: 0;
+  display: none;
 }
 .nav>li>a {
   text-transform: uppercase;
