--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -124,8 +124,7 @@ body {
   * Video section
   */
 .video-section {
-  padding-top: 30px;
-  min-height: 600px;
+  padding: 30px 0;
   p {
     color: $blue;
     text-shadow: 0px 0px 30px rgba(0,0,0,1);
