--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -182,6 +182,9 @@ body {
 .black-bg {
   background: url("../images/circuit-pattern-black.png") repeat #000; }
 
+.white-bg {
+  background: url("../images/circuit-pattern-sm3.png") repeat #fff; }
+
 /*
  * Header
  */
@@ -300,8 +303,8 @@ body {
   position: relative; }
   .background-section::before {
     content: "";
-    background: url("../images/circuit-pattern-black.png") repeat #000;
-    opacity: 0.5;
+    background: url("../images/circuit-pattern-sm3.png") repeat #fff;
+    opacity: 0.15;
     top: 0;
     left: 0;
     bottom: 0;
@@ -310,7 +313,7 @@ body {
     z-index: -1; }
   .background-section::after {
     content: "";
-    background: #000;
+    background: #fff;
     opacity: 1;
     top: 0;
     left: 0;
@@ -318,13 +321,18 @@ body {
     right: 0;
     position: absolute;
     z-index: -2; }
-  .background-section p {
-    color: #fff;
+  .background-section p:first-of-type {
     font-size: 22px;
+    margin-top: 40px; }
+  .background-section p {
+    color: #000;
+    font-style: normal;
+    font-size: 14px;
     text-align: left;
-    text-shadow: 0px 0px 20px black;
+    text-shadow: none;
     opacity: 1;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    font-weight: 200; }
   .background-section h1 {
     color: #007eff;
     margin: 40px 0 20px 0; }
