--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -288,11 +288,11 @@ body {
   border-radius: 0;
   font-size: 25px;
   text-transform: uppercase;
-  padding: 5px 20px;
-  border: 4px solid #000; }
+  padding: 9px 24px;
+  border: 1px solid #000; }
   .btn-lg.btn-black:hover {
     color: #fff;
-    border: 4px solid #fff; }
+    border: 1px solid #fff; }
 
 /*
  * Background section
@@ -341,9 +341,21 @@ body {
  * Footer
  */
 .footer {
-  background-color: #151515;
+  background-color: #001830;
   padding: 20px 0;
-  text-align: left; }
+  text-align: left;
+  text-transform: uppercase;
+  font-size: 0.8em; }
+  .footer img {
+    margin: 0 2em; }
+    @media (min-width: 768px) {
+      .footer img {
+        margin: 0 6em; } }
+  .footer a {
+    color: #007eff; }
+  .footer a:hover {
+    text-decoration: none;
+    color: #fff; }
 
 /*
  * Affix and center
