--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -1,7 +1,12 @@
 $black: #151515;
 $blue: #007eff;
 
+$footer-color: #001830;
+
+$medium: 768px;
+
 @import 'social-buttons';
+@import 'breakpoint';
 
 /*
  * Globals
@@ -202,11 +207,11 @@ body {
   border-radius: 0;
   font-size: 25px;
   text-transform: uppercase;
-  padding: 5px 20px;
-    border: 4px solid #000;
+  padding: 9px 24px;
+    border: 1px solid #000;
   &:hover {
     color: #fff;
-    border: 4px solid #fff;
+    border: 1px solid #fff;
   }
 }
 /*
@@ -267,9 +272,32 @@ body {
  */
 
 .footer {
-  background-color: $black;
+  background-color: $footer-color;
   padding: 20px 0;
   text-align: left;
+  text-transform: uppercase;
+  font-size: 0.8em;
+
+  img {
+
+    margin: 0 2em;
+
+    @include breakpoint($medium) {
+      margin: 0 6em;
+    }
+
+
+  }
+
+  a {
+    color: $blue;
+  }
+  a:hover {
+    text-decoration: none;
+    color: #fff;
+  }
+
+
 }
 
 
