--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -88,7 +88,7 @@ body {
  * bg styles
  */
 .blue-bg {
-  background: url('../images/circuit-pattern-blue.png') repeat $blue;
+  background:  $blue;
 }
 .black-bg {
   background: url('../images/circuit-pattern-black.png') repeat #000;
