Fix header size

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -391,7 +391,7 @@ body {
     margin: 40px 0 20px 0;
     text-shadow: none; }
   .background-section h1 {
-    font-size: 2em;
+    font-size: 36px;
     text-align: left; }
   .background-section h2 {
     margin-top: 0;
