--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -207,7 +207,7 @@ body {
  */
 .jumbotron img {
   width: 100%;
-  max-width: 800px;
+  max-width: 1200px;
   margin-top: 0px;
   -webkit-animation-duration: 0.5s;
   animation-duration: 0.5s;
@@ -226,15 +226,22 @@ body {
     opacity: 1;
     transform: none; } }
 .jumbotron {
+  background: url("../images/circuit-pattern-sm2.png") repeat #000;
   margin-bottom: 0; }
   .jumbotron a {
     text-decoration: underline; }
   @media (min-width: 768px) {
     .jumbotron {
+      padding-top: 80px;
       height: 400px; } }
   .jumbotron h2 {
-    font-weight: 200;
-    letter-spacing: 0.01em; }
+    font-weight: 400;
+    letter-spacing: 0.01em;
+    font-style: normal;
+    font-size: 1.9em; }
+    @media (min-width: 768px) {
+      .jumbotron h2 {
+        font-size: 2.65em; } }
 
 /*
  * Video section
@@ -273,6 +280,7 @@ body {
  * Call section
  */
 .calltool-section {
+  background: url("../images/circuit-pattern-sm2.png") repeat #000;
   padding: 60px 0 80px 0; }
   .calltool-section h1, .calltool-section h2 {
     padding: 0;
@@ -313,13 +321,17 @@ body {
   text-align: center;
   padding-left: 10px; }
   #tf-call-widget-form h5 {
-    font-size: 18px;
+    text-transform: uppercase;
+    font-size: 14px;
     margin-top: 20px;
     margin-bottom: 20px;
     margin-top: 2.5em;
     font-family: 'Lato';
-    font-weight: 300;
-    font-style: normal; }
+    font-weight: 600;
+    font-style: normal;
+    text-align: left;
+    margin-left: 1em;
+    letter-spacing: 0.12em; }
   #tf-call-widget-form label {
     font-size: 16px; }
   #tf-call-widget-form .privacy-info {
@@ -339,19 +351,19 @@ body {
     margin: 0 auto;
     font-family: 'Lato';
     font-weight: 300;
-    font-size: 24px;
-    background: transparent;
+    font-size: 22px;
+    background: rgba(255, 255, 255, 0.25);
     color: #fff;
     outline: 0;
     border: 0;
     -webkit-appearance: none;
     border-radius: 0;
-    border-bottom: 2px solid #fff;
+    border-bottom: 4px solid #fff;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
-    padding-left: 2.2em;
-    width: 80%; }
+    text-align: left;
+    width: 84%; }
     #tf-call-widget-form .input-lg:focus {
       outline: 0;
       -webkit-box-shadow: none;
@@ -394,11 +406,13 @@ body {
     font-size: 36px;
     text-align: left; }
   .background-section h2 {
-    margin-top: 0;
-    margin-bottom: 30px;
-    font-size: 1.6em; }
+    margin-top: 1.4em;
+    margin-bottom: 20px;
+    font-size: 1.8em;
+    text-align: left; }
 
 .quote-section {
+  background: url("../images/circuit-pattern-sm2.png") repeat #000;
   text-shadow: none;
   padding-bottom: 40px; }
   .quote-section div div div {
@@ -408,13 +422,16 @@ body {
     .quote-section div div div a {
       float: right;
       text-transform: uppercase;
-      font-weight: 400; }
+      font-weight: 400;
+      letter-spacing: 0.15em;
+      font-size: 0.8em; }
       @media (min-width: 768px) {
         .quote-section div div div a {
           padding-right: 0em; } }
   .quote-section p {
-    font-size: 18px;
-    font-weight: 300; }
+    font-size: 22px;
+    font-weight: 300;
+    line-height: 27px; }
 
 /*
  * Footer
